welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:65: error: not found: value moyenCarree
    moyenCarree();
    ^